labo10/gateway/manifest/gateway.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  IngressClassName: nginx
  rules:
  - host: mp3converter.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: gateways
            port: 
              number: 5000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gatewayd
spec:
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      containers:
      - name: gatewayc
        image: x0backslash0x/gateway
        resources:
          requests:
            memory: "100Mi"
            cpu: "500m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateways
spec:
  ports:
    - port: 5000
      targetPort: 8080
